compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__variables__discarded.snap
---
source: compiler-core/src/erlang/tests/variables.rs
assertion_line: 58
expression: "pub fn go() {\n  let _r = 1\n  let _r = 2\n  Nil\n}"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([go/0]).

-file("/root/project/test/my/mod.rakun", 1).
-spec go() -> nil.
go() ->
    _ = 1,
    _ = 2,
    nil.
