compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__variables__shadow_and_call.snap
---
source: compiler-core/src/erlang/tests/variables.rs
assertion_line: 34
expression: "\npub fn main(x) {\n  fn(x) { x }(x)\n}\n"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/1]).

-file("/root/project/test/my/mod.rakun", 2).
-spec main(K) -> K.
main(X) ->
    (fun(X@1) -> X@1 end)(X).
