compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__variables__shadow_param.snap
---
source: compiler-core/src/erlang/tests/variables.rs
assertion_line: 23
expression: "pub fn main(board) {\nfn(board) { board }\n  board\n}"
---
----- SOURCE CODE
pub fn main(board) {
fn(board) { board }
  board
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/1]).

-file("/root/project/test/my/mod.rakun", 1).
-spec main(I) -> I.
main(Board) ->
    fun(Board@1) -> Board@1 end,
    Board.
