compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__variables__shadow_pipe.snap
---
source: compiler-core/src/erlang/tests/variables.rs
assertion_line: 45
expression: "\npub fn main(x) {\n  x\n  |> fn(x) { x }\n}\n"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/1]).

-file("/root/project/test/my/mod.rakun", 2).
-spec main(K) -> K.
main(X) ->
    _pipe = X,
    (fun(X@1) -> X@1 end)(_pipe).
